--- a/src/services/tsconfig.json
+++ b/src/services/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "../tsconfig-base",
     "compilerOptions": {
         "removeComments": false,
+        "strictNullChecks": true,
         "outFile": "../../built/local/typescriptServices.js",
         "declaration": true
     },
